# tracking_monte02_ros2

./: .gitignore  README.md  joint_r7_wrist_roll.txt  orbbec_336_ost.txt  run.ipynb  start_robot_video_stream.sh  tracking_with_arm_control.sh  tracking_with_cam0.sh  tracking_with_orbbec.sh  tracking_with_robot_front_head.sh  tracking_with_robot_head.sh
config/: camera_head_front_intrinsics.txt  camera_lhead_front_intrinsics_02_3.txt  joint_l7_wrist_roll.txt  joint_lt_sensor_rgbd_12.txt  joint_r7_wrist_roll.txt
src/Monte_api_ros2/: package.xml  setup.cfg  setup.py
src/Monte_api_ros2/Monte_api/: coarse_approach_with_set_arm_position.py  control_node.py  head_base_tf_node.py  points3d_test_publisher.py  points3d_tf_to_arm_base_node.py  points3d_tf_to_arm_base_node_no_control.py  points3d_tf_to_arm_base_node_rotate_x.py
src/Monte_api_ros2/config/: config.yaml
src/Monte_api_ros2/launch/: arm_control.launch.py  head_base_tf.launch.py  monte_api.launch.py
src/OrbbecSDK_ROS2/orbbec_camera/: CMakeLists.txt
src/OrbbecSDK_ROS2/orbbec_camera/launch/: gemini_330_series.launch.py
src/robot_video_client/: CMakeLists.txt  README.md  package.xml  run_robot_video_client.sh
src/robot_video_client/config/: dds_config.json  logger_config.json  video_config.json
src/robot_video_client/include/: common_def.h  data_queue.hpp  depth_decoder.h  utils.hpp  video_client_node.h  video_decoder.h
src/robot_video_client/launch/: robot_video_client.launch.py  video_click_node.launch.py
src/robot_video_client/rtsp_client/: common_def.h  media_rtsp_client.cpp  media_rtsp_client.h  rtsp_client.cpp  rtsp_client.h  rtsp_client_impl.cpp  rtsp_client_impl.h  rtsp_client_sink.cpp  rtsp_client_sink.h  timer.hpp  timer_singleton.h
src/robot_video_client/src/: depth_decoder.cpp  main.cpp  utils.cpp  video_click_node.cpp  video_client_node.cpp  video_decoder.cpp
src/track_on_ros2/: README.md  package.xml  setup.cfg  setup.py
src/track_on_ros2/config/: config.yaml
src/track_on_ros2/launch/: track_camera.launch.py  track_camera_front.launch.py  track_camera_front_min.launch.py  track_camera_orbbec.launch.py
src/track_on_ros2/track_on_ros2/: test.py  track_camera_front_min_node.py  track_camera_front_node.py  track_camera_front_node_12_3.py  track_camera_node.py  track_camera_orbbec_node.py
src/track_on_ros2_msgs/: CMakeLists.txt  package.xml
src/track_on_ros2_msgs/msg/: Keypoint.msg  Keypoints.msg
src/track_on_ros2_srv/: CMakeLists.txt  package.xml
src/track_on_ros2_srv/srv/: ControlTracking.srv  SetKeypoints.srv
